# seven-al-group

./: .gitignore  CMakeLists.txt  collision_warning_test.go  collision_warning_test.go.bkp  main.go
cmd/feu/: main.go
cmd/scenario_1/scenario_1_backend/: main.go
cmd/scenario_1/scenario_1_demo/: main.go
cmd/scenario_2/scenario_2_demo/: main.go
cmd/wifi/: main.go
communication/: Broadcasteur.cpp  Broadcasteur.h  Recepteur.cpp  Recepteur.h
cpp/: CMakeLists.txt
cpp/src/: breakdown_analyser.cpp  breakdown_analyser.hpp  controller.cpp  controller.hpp  driving_directions.cpp  driving_directions.hpp  lead_analyzer.cpp  lead_analyzer.hpp  main.cpp  traffic_lights_analyzer.cpp  traffic_lights_analyzer.hpp
cpp/src/io/: broadcaster_wifi.cpp  broadcaster_wifi.hpp  car_interface.cpp  car_interface.hpp  driver_interface.cpp  driver_interface.hpp  receptor_wifi.cpp  receptor_wifi.hpp
cpp/src/structs/: car_status.cpp  car_status.hpp  directions.hpp  traffic_light_status.cpp  traffic_light_status.hpp
cpp/src/utils/: communication_channel.hpp  json.hpp
donnees/: Registre.cpp  Registre.h  StatusVoiture.cpp  StatusVoiture.h
feux/: main.go
feux/feu/: connection.go  feu.go  status.go
go/cmd/scenario_1/scenario_1_demo/: main.go
go/cmd/scenario_2/scenario_2_backend/: main.go
go/cmd/scenario_2/scenario_2_demo/: main.go
go/cmd/scenario_video/: main.go
go/cmd/scenario_video2/: main.go
go/cmd/stress/: main.go
go/cmd/voiture/: main.go
go/cmd/voiture_demo/: main.go
go/cmd/wifi/: main.go
go/src/feu/: feu.go  status.go
go/src/voiture/: connection.go  data.go  interface_conducteur.go  modules.go  registre.go  status.go  statusFeux.go  voiture.go
go/src/wifi/: wifi.go
interfaceAL/: .project  nbactions.xml  pom.xml
interfaceAL/src/main/java/groupeseven/interfaceal/: Connexion.java  Feu.java  Frame.java  Ping.java  Screen.java  Voiture.java
interfaces/: InterfaceConducteur.cpp  InterfaceConducteur.h  InterfaceMateriel.cpp  InterfaceMateriel.h
modules/: FreinageUrgence.cpp  FreinageUrgence.h
src/feu/: connection.go  feu.go  status.go
src/voiture/: connection.go  interface_conducteur.go  modules.go  modules_test.go  registre.go  statusFeux.go  voiture.go
src/wifi/: wifi.go
voiture/: main.go
voiture/voiture/: connection.go  interface_conducteur.go  modules.go  registre.go  status.go  statusFeux.go  voiture.go
voiture/voiture/comm/: connection.go
wifi/: main.go
